--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ google_analytics: UA—XXXXXXXX-X
 # Author
 author:
   name:         Uysal Koyuncu
-  url:          https://chester.how
+  url:          https://Uysal-Koyuncu.github.io
   email:        zhuyongzhe3141592@gmail.com
 
 # Build settings
@@ -28,7 +28,11 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-remote-theme
   # - jemoji #Uncomment this to allow emoji in your post
+
+# Remote Theme
+remote_theme: chesterhow/tale
 
 # Permalinks
 permalink:      /:year-:month-:day/:title
