--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Tale
+title:          Uysal Koyuncu
 description:    "Minimal Jekyll theme for storytellers"
 baseurl:        ""
 url:            "https://uysal-koyuncu.github.io"
